# StockManager

./: .gitignore  README.md
StockManager/: CMakeLists.txt  README.md  company.cpp  company.h  country.cpp  date.cpp  date.h  dlgexecutesql.cpp  dlgexecutesql.h  dlgexecutesql.ui  formtabdatabase.cpp  formtabdatabase.h  formtabdatabase.ui  formtabdownload.cpp  formtabdownload.h  formtabdownload.ui  formtabindexes.cpp  formtabindexes.h  formtabindexes.ui  formtabsettings.cpp  formtabsettings.h  formtabsettings.ui  formtabstocks.cpp  formtabstocks.h  formtabstocks.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  marketnasdaq.cpp  marketnasdaq.h  marketplace.cpp  marketplace.h  resources.qrc  stock.cpp  stock.h  tradingday.cpp  tradingday.h  tradinghistory.cpp  tradinghistory.h
StockManager/finance/: country.h  ftpdownloader.h  index.cpp  index.h  marketnasdaq.cpp  marketnasdaq.h  marketplace.cpp  stock.cpp  stock.h  tradingday.cpp  tradingday.h  tradinghistory.cpp  tradinghistory.h  yahoofinance.cpp  yahoofinance.h
data/: nasdaqlisted.txt  nasdaqlisted10.txt
db/: create_view_stockview.txt  insert_marketplace.sql  rebuild_all_insert.sql  rebuild_db_schema.sql  stockmanager.db  stockmanager.db copy  stockmanager.db good  stocksman.db
poubelle/download yhf curl/: CMakeLists.txt  yahoofinance.cpp  yahoofinance.h
saved async/: formtabstocks.cpp
